fix(*): add dark mode for context menu and login modal

--- a/src/components/ContextMenu.scss
+++ b/src/components/ContextMenu.scss
@@ -1,7 +1,3 @@
-.context-menu {
-  top: -120px !important;
-}
-
 .context-menu-button {
   margin-left: 8px !important;
 }
